updated to run tests

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -14,6 +14,14 @@ jobs:
       with:
         dotnet-version: 2.2.108
     - name: Build with dotnet
-      run:  dotnet build --configuration Release 
+      run:  dotnet build --configuration Release
+      working-directory: ./
+    - name: Test
+      run:  dotnet run
+      working-directory: ./
+    
+     
+     
+     
       
       
