--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -17,7 +17,7 @@ jobs:
       run:  dotnet build --configuration Release
       working-directory: ./
     - name: Test
-      run:  dotnet run
+      run:  dotnet test
       working-directory: ./
     
      
