--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,13 @@
-name: .NET Core
+name: Continious Integration
 
-on: [push]
+on:
+  push:
+    branches: 
+      - master
+  pull_request:
+    branches: 
+      - master
+ 
 
 jobs:
   build:
